Add Security section to main navigation
- Add Security menu item to top navigation bar
- Links to security overview page
- Positioned between Architecture and User Guides

--- a/site/_data/navigation.yml
+++ b/site/_data/navigation.yml
@@ -6,6 +6,8 @@
   url: /docs/background/platform-overview/
 - text: Architecture
   url: /docs/architecture/miso-controller/
+- text: Security
+  url: /docs/security/security-overview/
 - text: User Guides
   url: /docs/user-guides/portal-usage/
 - text: API Reference
