--- a/docs/navigation.yaml
+++ b/docs/navigation.yaml
@@ -1,90 +1,57 @@
 title: AI Fabrix Documentation Navigation
 description: Main navigation structure for AI Fabrix documentation site
 version: stable
-last_updated: '2025-09-22'
+last_updated: '2025-01-15'
 navigation:
   - text: Home
     url: /
-  - text: Getting Started
-    url: /docs/getting-started/quick-deploy/
+  - text: Overview
+    url: /docs/overview/platform-overview/
     submenu:
-      - text: Installation
-        submenu:
-          - text: Installation Guide
-            url: /docs/getting-started/installation/
-      - text: Quick deploy
-        submenu:
-          - text: Quick Deploy Guide
-            url: /docs/getting-started/quick-deploy/
-  - text: Platform Overview
-    url: /docs/background/platform-overview/
+      - text: Platform Overview
+        url: /docs/overview/platform-overview/
+  - text: Evaluation Guide
+    url: /docs/evaluation/getting-started/
     submenu:
-      - text: Architecture overview
-        submenu:
-          - text: Architecture Overview
-            url: /docs/background/architecture-overview/
-      - text: Competitive advantages
-        submenu:
-          - text: Competitive Advantages
-            url: /docs/background/competitive-advantages/
-      - text: Compliance requirements
-        submenu:
-          - text: Compliance Requirements
-            url: /docs/background/compliance-requirements/
-      - text: Deployment models
-        submenu:
-          - text: Deployment Models
-            url: /docs/background/deployment-models/
-      - text: Integration capabilities
-        submenu:
-          - text: Integration Capabilities
-            url: /docs/background/integration-capabilities/
-      - text: Modules overview
-        submenu:
-          - text: Modules Overview
-            url: /docs/background/modules-overview/
-      - text: Platform overview
-        submenu:
-          - text: Platform Overview
-            url: /docs/background/platform-overview/
-      - text: Target audience
-        submenu:
-          - text: Target Audience
-            url: /docs/background/target-audience/
-      - text: Technology stack
-        submenu:
-          - text: Technology Stack
-            url: /docs/background/technology-stack/
-      - text: Use cases
-        submenu:
-          - text: Use Cases
-            url: /docs/background/use-cases/
-  - text: Architecture
-    url: /docs/architecture/miso-controller/
+      - text: Getting Started
+        url: /docs/evaluation/getting-started/
+  - text: Core Components
+    url: /docs/core-components/miso-controller/
     submenu:
-      - text: Miso controller
-        submenu:
-          - text: Miso Controller Architecture
-            url: /docs/architecture/miso-controller/
-      - text: Portal architecture
-        submenu:
-          - text: Portal Architecture
-            url: /docs/architecture/portal-architecture/
-      - text: Security authentication
-        submenu:
-          - text: Security Authentication
-            url: /docs/architecture/security-authentication/
-  - text: User Guides
-    url: /docs/user-guides/
+      - text: Miso Controller
+        url: /docs/core-components/miso-controller/
+  - text: Enterprise Features
+    url: /docs/enterprise-features/security-compliance/
     submenu:
-      - text: Portal usage
-        submenu:
-          - text: Portal Usage Guide
-            url: /docs/user-guides/portal-usage/
-  - text: API Reference
-    url: /docs/api/miso-api/
+      - text: Security & Compliance
+        url: /docs/enterprise-features/security-compliance/
+  - text: Use Cases
+    url: /docs/use-cases/ai-workloads/
     submenu:
-      - text: Miso api
-        submenu:
-          - text: AI Fabrix Miso API
-            url: /docs/api/miso-api/
+      - text: AI Workload Use Cases
+        url: /docs/use-cases/ai-workloads/
+  - text: Deployment & Operations
+    url: /docs/deployment-operations/quick-deploy/
+    submenu:
+      - text: Quick Deploy Guide
+        url: /docs/deployment-operations/quick-deploy/
+  - text: Customer Success
+    url: /docs/customer-success/best-practices/
+    submenu:
+      - text: Best Practices
+        url: /docs/customer-success/best-practices/
+  - text: Roadmap
+    url: /docs/roadmap/platform-roadmap/
+    submenu:
+      - text: Platform Roadmap
+        url: /docs/roadmap/platform-roadmap/
+  - text: Modules & Documentation
+    url: /docs/modules-documentation/api-reference/
+    submenu:
+      - text: API Reference
+        url: /docs/modules-documentation/api-reference/
+  - text: Resources
+    url: /docs/resources/support-resources/
+    submenu:
+      - text: Support Resources
+        url: /docs/resources/support-resources/
