--- a/docs/core-components/core-platform-services.yaml
+++ b/docs/core-components/core-platform-services.yaml
@@ -6,6 +6,13 @@ owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
+table_of_contents:
+  - "Role of Core Services"
+  - "Connectors & Ingestion"
+  - "Metadata-Aware Retrieval"
+  - "Observability & Auditing"
+  - "Security & Compliance Integration"
+  - "Enterprise Benefits"
 custom_links:
   - text: Core Components
     url: /docs/core-components/
