--- a/docs/core-components/flowise-orchestration.yaml
+++ b/docs/core-components/flowise-orchestration.yaml
@@ -6,6 +6,13 @@ owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
+table_of_contents:
+  - "Role of Flowise"
+  - "Pipeline Orchestration"
+  - "Agent Framework"
+  - "Structured Outputs & Reuse"
+  - "Governance & Observability"
+  - "Enterprise Benefits"
 custom_links:
   - text: Core Components
     url: /docs/core-components/
