--- a/docs/core-components/sdk-plugins.yaml
+++ b/docs/core-components/sdk-plugins.yaml
@@ -6,6 +6,13 @@ owner: platform-team
 last_reviewed: '2025-01-15'
 date: '2025-01-15'
 toc: true
+table_of_contents:
+  - "Role of SDK & Plugins"
+  - "Safe Extension Model"
+  - "Developer Experience"
+  - "Governance & Lifecycle Controls"
+  - "Example Use Cases"
+  - "Enterprise Benefits"
 custom_links:
   - text: Core Components
     url: /docs/core-components/
